content: update chapter 9 quote from Max Planck to Daniel Kahneman

--- a/src/content/the-last-economy/chapter-9.mdx
+++ b/src/content/the-last-economy/chapter-9.mdx
@@ -7,8 +7,8 @@
   />
 </audio>
 
-> "A new scientific truth does not triumph by convincing its opponents and making them see the light, but rather because its opponents eventually die, and a new generation grows up that is familiar with it."
-> — Max Planck
+> "We can be blind to the obvious, and we are also blind to our blindness."
+> — Daniel Kahneman
 
 ## The Elephant in the Dark Room
 
