--- a/src/content/the-last-economy/chapter-6.mdx
+++ b/src/content/the-last-economy/chapter-6.mdx
@@ -2,7 +2,7 @@
 
 <audio controls className="w-full mt-6">
   <source
-    src="https://storage.googleapis.com/webstatics.ii.inc/Chapter-6-TLE.mp3"
+    src="https://storage.googleapis.com/webstatics.ii.inc/audiobook/Chapter-6-TLE.mp3"
     type="audio/mp3"
   />
 </audio>
