refactor: update audio source URLs to remove storage.googleapis.com prefix

--- a/src/content/the-last-economy/chapter-11.mdx
+++ b/src/content/the-last-economy/chapter-11.mdx
@@ -2,7 +2,7 @@
 
 <audio controls className="w-full mt-6">
   <source
-    src="https://storage.googleapis.com/webstatics.ii.inc/audiobook/Chapter-11-TLE-NEW.mp3"
+    src="https://webstatics.ii.inc/audiobook/Chapter-11-TLE-NEW.mp3"
     type="audio/mp3"
   />
 </audio>
