--- a/src/content/the-last-economy/chapter-3.mdx
+++ b/src/content/the-last-economy/chapter-3.mdx
@@ -1,10 +1,7 @@
 # 3. The Seven Fatal Lies of a Dying Paradigm
 
 <audio controls className="w-full mt-6">
-  <source
-    src="https://storage.googleapis.com/webstatics.ii.inc/Chapter-3-TLE.mp3"
-    type="audio/mp3"
-  />
+  <source src="https://webstatics.ii.inc/Chapter-3-TLE.mp3" type="audio/mp3" />
 </audio>
 
 > "It ain't what you don't know that gets you into trouble. It's what you know for sure that just ain't so."
