--- a/src/content/the-last-economy/epilogue.mdx
+++ b/src/content/the-last-economy/epilogue.mdx
@@ -1,10 +1,7 @@
 # Epilogue: The Thousandth Day
 
 <audio controls className="w-full mt-6">
-  <source
-    src="https://storage.googleapis.com/webstatics.ii.inc/Epilogue-TLE.mp3"
-    type="audio/mp3"
-  />
+  <source src="https://webstatics.ii.inc/Epilogue-TLE.mp3" type="audio/mp3" />
 </audio>
 
 > "What we call the beginning is often the end  
