--- a/src/content/the-last-economy/chapter-18.mdx
+++ b/src/content/the-last-economy/chapter-18.mdx
@@ -1,10 +1,7 @@
 # 18. Money for Two Worlds
 
 <audio controls className="w-full mt-6">
-  <source
-    src="https://storage.googleapis.com/webstatics.ii.inc/Chapter-18-TLE.mp3"
-    type="audio/mp3"
-  />
+  <source src="https://webstatics.ii.inc/Chapter-18-TLE.mp3" type="audio/mp3" />
 </audio>
 
 > "Money is a matter of functions four: a medium, a measure, a standard, a store. But money is not all these functions equally well, and therein lies the problem."
