--- a/src/content/the-last-economy/chapter-5.mdx
+++ b/src/content/the-last-economy/chapter-5.mdx
@@ -1,10 +1,7 @@
 # 5. The Trial by Fire
 
 <audio controls className="w-full mt-6">
-  <source
-    src="https://storage.googleapis.com/webstatics.ii.inc/Chapter-5-TLE.mp3"
-    type="audio/mp3"
-  />
+  <source src="https://webstatics.ii.inc/Chapter-5-TLE.mp3" type="audio/mp3" />
 </audio>
 
 We have spent the first part of this book in an act of demolition. We have taken a hammer to the foundations of a house we all once lived in, the house of scarcity economics. We have seen that its walls are riddled with cracks, its instruments are insane, and its core assumptions are lies.
