--- a/src/content/the-last-economy/introduction.mdx
+++ b/src/content/the-last-economy/introduction.mdx
@@ -2,7 +2,7 @@
 
 <audio controls className="w-full mt-6">
   <source
-    src="https://storage.googleapis.com/webstatics.ii.inc/Introduction-TLE.mp3"
+    src="https://webstatics.ii.inc/Introduction-TLE.mp3"
     type="audio/mp3"
   />
 </audio>
