Clarify pronoun reference in rational actor question
- Change 'algorithm that knows it better than it knows itself'
- To 'algorithm that knows the human better than the human knows itself'
- Eliminates ambiguous pronoun reference that could confuse readers
- Makes the power dynamic between human and algorithm more explicit
- Improves readability and impact of the rhetorical question

--- a/src/content/the-last-economy/chapter-3.mdx
+++ b/src/content/the-last-economy/chapter-3.mdx
@@ -80,7 +80,7 @@ _If the best things in life are free, why is our economy designed to measure onl
 
 **The Reality Check:** We are not rational actors in an impartial environment. We are biological creatures with predictable cognitive biases, and we now live in an environment that has been perfectly engineered to exploit those biases for profit. Every tech platform is an addiction machine, using variable ratio reinforcement and social validation loops to hijack our dopamine systems. We are not optimizing the system; the system is optimizing us to be perfect consumers.
 
-_Who is the rational actor in a battle between a human mind and an algorithm that knows it better than it knows itself?_
+_Who is the rational actor in a battle between a human mind and an algorithm that knows the human better than the human knows itself?_
 
 **Why the Lie is Fatal:** In the age of AI, this asymmetry becomes absolute. AI can model our individual psychology, predict our desires, and generate personalized content to manipulate our behavior with superhuman effectiveness. The "rational actor" is not just a fiction; it is a defenseless target. Any economic or political theory based on consumer sovereignty or the "wisdom of the crowd" is now obsolete and dangerous.
 
