Fix corrupted dollar signs in chapter 4 healthcare examples
- Replace malformed parenthetical dollar amounts with properly escaped dollar signs
- Change from '(,000)' format to 'costs \,000' for better readability
- Fix all healthcare cost examples: diagnostic tests, surgery, chemo, hospital stays, meds
- Ensure proper markdown rendering of currency symbols
- Improve sentence flow while maintaining the economic critique impact

--- a/src/content/the-last-economy/chapter-4.mdx
+++ b/src/content/the-last-economy/chapter-4.mdx
@@ -24,11 +24,11 @@ Let me show you through the hall of mirrors that is modern economic measurement.
 
 **Exhibit A: The Hurricane Economy.** When a hurricane devastates a city, it is a human tragedy. But for GDP, it is a stimulus package. The destruction itself does not register. But the frantic activity that follows, the rebuilding, the insurance payouts, the emergency services, is a multi billion dollar windfall. By GDP logic, the best possible year would involve every city being destroyed and then rebuilt.
 
-**Exhibit B: The Cancer Boom.** A healthy person contributes little to the healthcare economy. But a person diagnosed with lung cancer? That is a windfall for GDP. Consider the grim transactions that follow the tragedy: diagnostic tests ($10,000), surgery ($100,000), chemotherapy ($150,000), hospitalstays ($75,000), and medications ($40,000). A single cancer case can generate a $425,000 gain in GDP.
+**Exhibit B: The Cancer Boom.** A healthy person contributes little to the healthcare economy. But a person diagnosed with lung cancer? That is a windfall for GDP. Consider the grim transactions that follow the tragedy: diagnostic tests cost \$10,000, surgery costs \$100,000, chemotherapy costs \$150,000, hospital stays cost \$75,000, and medications cost \$40,000. A single cancer case can generate a \$425,000 gain in GDP.
 
 By this logic, carcinogens are economic stimulants. Tobacco companies weren't just killing people; they were creating GDP multipliers. We have built an economy that is structurally incentivized to manage sickness, not to create health. Prevention is an economic loss; a cure would be an economic catastrophe.
 
-**Exhibit C: The Divorce Industrial Complex.** A happy, stable family that raises its own children and supports its community contributes almost nothing to GDP. But when that family breaks apart, the economy booms. Suddenly, there are two households to be maintained instead of one, doubling the consumption of housing and utilities. Therapists are hired. Lawyers are paid. In the United States, divorce lawyers alone added over $50 billion to GDP last year. The human tragedy of a broken home is recorded as a net positive on the national ledger.
+**Exhibit C: The Divorce Industrial Complex.** A happy, stable family that raises its own children and supports its community contributes almost nothing to GDP. But when that family breaks apart, the economy booms. Suddenly, there are two households to be maintained instead of one, doubling the consumption of housing and utilities. Therapists are hired. Lawyers are paid. In the United States, divorce lawyers alone added over \$50 billion to GDP last year. The human tragedy of a broken home is recorded as a net positive on the national ledger.
 
 **Exhibit D: The Planned Obsolescence Museum.** Your phone could be built to last a decade. Apple ensures it will not. Each forced upgrade, each battery that mysteriously degrades, each software update that slows your old device is a victory for GDP. Building products that endure is economic sabotage. Building products designed to be replaced is growth.
 
