--- a/src/content/the-last-economy/chapter-5.mdx
+++ b/src/content/the-last-economy/chapter-5.mdx
@@ -4,6 +4,10 @@
   <source src="https://webstatics.ii.inc/Chapter-5-TLE.mp3" type="audio/mp3" />
 </audio>
 
+> “If a man will begin with certainties, he shall end in doubts; but if he will be content to begin with doubts, he shall end in certainties." 
+
+> — Francis Bacon
+
 We have spent the first part of this book in an act of demolition. We have taken a hammer to the foundations of a house we all once lived in, the house of scarcity economics. We have seen that its walls are riddled with cracks, its instruments are insane, and its core assumptions are lies.
 
 The house is condemned. The ground is cleared. It is a terrifying and liberating place to stand.
