--- a/src/content/the-last-economy/appendix-a.mdx
+++ b/src/content/the-last-economy/appendix-a.mdx
@@ -22,26 +22,26 @@ As argued in Chapter 6, persistence over long timescales cannot be the result of
 
 The instantaneous value of the Intelligence Action is the **Lagrangian**. This term, borrowed from classical physics, represents the total computational cost a system incurs at any given moment. It is the formal version of the "Sorter's Price" from Chapter 6.
 
-- **Definition 1: The Lagrangian.** The Lagrangian, L, is the sum of three minimal, irreducible computational costs:
-  L = H(q, t) + C(q) + K(q̇)
+- **Definition 1: The Intelligence Lagrangian.** Intelligence Langrian, L, is the sum of three minimal, irreducible computational costs:
+  L = H(q, t) + C(q) + K(*r)
   Let us examine each component:
 
-- **Predictive Error (H):** The cost of being wrong. This measures the mismatch between the system's internal model (its state q) and reality. This term drives the system toward **accuracy**.
+- **Accuracy Cost (A):** The cost of being wrong. This measures the mismatch between the system's internal model (its state q) and reality. This term drives the system toward **accuracy**.
 
-- **Model Complexity (C):** The cost of thinking. This measures the informational complexity of the model itself. This term drives the system toward **simplicity and generalizability**.
+- **Complexity Cost (C):** The cost of thinking. This measures the informational complexity of the model itself. This term drives the system toward **simplicity and generalizability**.
 
-- **Update Cost (K):** The cost of learning. This measures the energetic cost of changing the model (its rate of change q̇). This term drives the system toward **efficiency**.
+- **Effort Cost (E):** The cost of learning. This measures the energetic cost of changing the model (its rate of change *r). This term drives the system toward **efficiency**.
 
 **Step 4: The Three Laws & The Emergence of the MIND Capitals**
 A system that minimizes the Intelligence Action over a long and uncertain future must necessarily invest in four specific forms of physical capital. The MIND Capitals are the direct, measurable assets that emerge from the long term optimization of the Lagrangian's three costs. These principles form the Tripod of Justice: the constitutional constraints for any persistent system.
 
 - **Theorem 1: The Three Laws of Persistence and the Derivation of the MIND Capitals.**
 
-  - **The Law of Flow:** To minimize Predictive Error (H) over time, a system must build an accurate model of itself and its environment. This requires accumulating M - Material Capital (an accurate physical ledger) and I - Intelligence Capital (a library of predictive patterns).
+  - **The Law of Flow:** To minimize Accuracy Cost (A) over time, a system must build an accurate model of itself and its environment. This requires accumulating M - Material Capital (an accurate physical ledger) and I - Intelligence Capital (a library of predictive patterns).
 
-  - **The Law of Resilience:** To minimize Model Complexity (C) under uncertainty, a system must avoid the catastrophic failure of a brittle, simple model by maintaining a portfolio of options, thus accumulating D - Diversity Capital.
+  - **The Law of Resilience:** To minimize Complexity Cost (C) under uncertainty, a system must avoid the catastrophic failure of a brittle, simple model by maintaining a portfolio of options, thus accumulating D - Diversity Capital.
 
-  - **The Law of Openness:** To minimize Update Cost (K) over time, a system must reduce the friction of adaptation. It must build high trust channels for information to flow, thus accumulating N - Network Capital.
+  - **The Law of Openness:** To minimize Effort Cost (E) over time, a system must reduce the friction of adaptation. It must build high trust channels for information to flow, thus accumulating N - Network Capital.
 
 **Part III: The Emergent Architecture of a Living Economy**
 
@@ -55,9 +55,9 @@ These capitals flow across a network whose structure dictates the dynamics of th
 **Step 6: Emergent Computational Architectures**
 The Firm and the Market are emergent strategies for processing information on this network.
 
-- **The Market (The Bazaar):** A distributed architecture for Discovery that minimizes Predictive Error (H).
+- **The Market (The Bazaar):** A distributed architecture for Discovery that minimizes Accuracy Cost (A).
 
-- **The Firm (The Cathedral):** A hierarchical architecture for Execution that minimizes Model Complexity (C) and Update Cost (K).
+- **The Firm (The Cathedral):** A hierarchical architecture for Execution that minimizes Complexity Cost (C) and Effort Cost (E).
 
 **Part IV: The Generative Engine: A New Scientific Method**
 
@@ -77,11 +77,11 @@ This section demonstrates the framework's power by formally re-deriving past eco
 
 **A. The Great Unification: Deriving Economic Schools**
 
-- **Neoclassical Economics:** A model that prioritizes the minimization of Predictive Error (H).
+- **Neoclassical Economics:** A model that prioritizes the minimization of Accuracy Cost (A).
 
-- **Marxian Dynamics:** A model that prioritizes the minimization of Update Cost (K).
+- **Marxian Dynamics:** A model that prioritizes the minimization of Effort Cost (E).
 
-- **Austrian & Institutional Economics:** A model focused on emergent protocols that minimize Model Complexity (C).
+- **Austrian & Institutional Economics:** A model focused on emergent protocols that minimize Model Complexity Cost (C).
 
 **B. Solving Foundational Puzzles as Verifiable Programs**
 
