--- a/src/content/the-last-economy/appendix-a.mdx
+++ b/src/content/the-last-economy/appendix-a.mdx
@@ -23,14 +23,14 @@ As argued in Chapter 6, persistence over long timescales cannot be the result of
 The instantaneous value of the Intelligence Action is the **Lagrangian**. This term, borrowed from classical physics, represents the total computational cost a system incurs at any given moment. It is the formal version of the "Sorter's Price" from Chapter 6.
 
 - **Definition 1: The Intelligence Lagrangian.** Intelligence Langrian, L, is the sum of three minimal, irreducible computational costs:
-  L = H(q, t) + C(q) + K(r)
+  L = H(q, t) + C(q) + K(*r*)
   Let us examine each component:
 
 - **Accuracy Cost (A):** The cost of being wrong. This measures the mismatch between the system's internal model (its state q) and reality. This term drives the system toward **accuracy**.
 
 - **Complexity Cost (C):** The cost of thinking. This measures the informational complexity of the model itself. This term drives the system toward **simplicity and generalizability**.
 
-- **Effort Cost (E):** The cost of learning. This measures the energetic cost of changing the model (its rate of change *r). This term drives the system toward **efficiency**.
+- **Effort Cost (E):** The cost of learning. This measures the energetic cost of changing the model (its rate of change *r*). This term drives the system toward **efficiency**.
 
 **Step 4: The Three Laws & The Emergence of the MIND Capitals**
 A system that minimizes the Intelligence Action over a long and uncertain future must necessarily invest in four specific forms of physical capital. The MIND Capitals are the direct, measurable assets that emerge from the long term optimization of the Lagrangian's three costs. These principles form the Tripod of Justice: the constitutional constraints for any persistent system.
