--- a/src/content/the-last-economy/appendix-a.mdx
+++ b/src/content/the-last-economy/appendix-a.mdx
@@ -18,7 +18,7 @@ As argued in Chapter 6, persistence over long timescales cannot be the result of
 
 ## Part II: The Physics of Intelligence
 
-**Step 3: The Lagrangian (The Sorter's Price))**
+**Step 3: The Lagrangian (The Sorter's Price)**
 
 The instantaneous value of the Intelligence Action is the **Lagrangian**. This term, borrowed from classical physics, represents the total computational cost a system incurs at any given moment. It is the formal version of the "Sorter's Price" from Chapter 6.
 
