style: format cancer costs as bulleted list for better readability

--- a/src/content/the-last-economy/chapter-4.mdx
+++ b/src/content/the-last-economy/chapter-4.mdx
@@ -21,7 +21,15 @@ Let me show you through the hall of mirrors that is modern economic measurement.
 
 **Exhibit A: The Hurricane Economy.** When a hurricane devastates a city, it is a human tragedy. But for GDP, it is a stimulus package. The destruction itself does not register. But the frantic activity that follows, the rebuilding, the insurance payouts, the emergency services, is a multi billion dollar windfall. By GDP logic, the best possible year would involve every city being destroyed and then rebuilt.
 
-**Exhibit B: The Cancer Boom.** A healthy person contributes little to the healthcare economy. But a person diagnosed with lung cancer? That is a windfall for GDP. Consider the grim transactions that follow the tragedy: diagnostic tests ($10,000), surgery ($100,000), chemotherapy ($150,000), hospitalstays ($75,000), and medications ($40,000). A single cancer case can generate a $425,000 gain in GDP.
+**Exhibit B: The Cancer Boom.** A healthy person contributes little to the healthcare economy. But a person diagnosed with lung cancer? That is a windfall for GDP. Consider the grim transactions that follow the tragedy:
+
+- Diagnostic tests ($10,000)
+- Surgery ($100,000)
+- Chemotherapy ($150,000)
+- Hospitalstays ($75,000)
+- Medications ($40,000)
+
+A single cancer case can generate a $425,000 gain in GDP.
 
 By this logic, carcinogens are economic stimulants. Tobacco companies weren't just killing people; they were creating GDP multipliers. We have built an economy that is structurally incentivized to manage sickness, not to create health. Prevention is an economic loss; a cure would be an economic catastrophe.
 
